# rats

./: .gitignore  Cargo.toml  readme.md
attestation-service/: Cargo.toml
attestation-service/src/: lib.rs  main.rs
attester/: Cargo.toml
attester/src/: api.rs  config.rs  core.rs  lib.rs  main.rs  service.rs
configs/: attester.toml  relying-party.toml  verifier.toml
protos/: Cargo.toml  attestation.proto  build.rs
protos/src/: attestation.rs  challenge.rs  lib.rs  mod.rs
relying-party/: Cargo.toml
relying-party/src/: api.rs  config.rs  core.rs  lib.rs  main.rs  service.rs
verifier/: Cargo.toml
verifier-service/: Cargo.toml
verifier-service/src/: main.rs
verifier/src/: api.rs  cca.rs  config.rs  core.rs  csv.rs  csv_support.rs  kunpeng.rs  lib.rs  main.rs  service.rs  service_config.rs  tdx.rs
