[package]
name = "attester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
kbs-types.workspace = true
protos = { path = "../protos" }
serde.workspace = true
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12.3", features = ["transport"] }
toml.workspace = true
