[package]
name = "attester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22.1"
kbs-types.workspace = true
protos = { path = "../protos" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12.3", features = ["transport"] }
toml.workspace = true
