[package]
name = "protos"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
getrandom = "0.2"
hmac = "0.12"
prost = "0.13.5"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tonic = { version = "0.12.3", features = ["transport"] }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.12.3"
