[package]
name = "relying-party"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
protos = { path = "../protos" }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["transport"] }
