[package]
name = "verifier-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
kbs-types.workspace = true
protos = { path = "../protos" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["transport"] }
verifier = { path = "../verifier" }
