[package]
name = "verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ccatoken = "0.1.0"
# chrono = { version = "0.4", features = ["serde"]}
cfg-if = "1.0.0"
bincode = { version = "1.3", optional = true }
bitfield = { version = "0.13", optional = true }
dcap-qvl = "0.3.11"
ear.workspace = true
kbs-types.workspace = true
libc = { version = "0.2", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
openssl-sys = { version = "0.9", optional = true }
protos = { path = "../protos" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
serde.workspace = true
serde-big-array = { version = "0.5.1", optional = true }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml.workspace = true
tonic = { version = "0.12.3", features = ["transport"] }
# uuid = { version = "1.0", features = ["v4"]}

tdx-quote = { features = ["mock"], version = "0.0.5" }

[features]
default = ["all-verifiers"]
all-verifiers = ["cca-verifier", "tdx-verifier", "csv-verifier", "kunpeng-verifier"]
cca-verifier = []
tdx-verifier = []
csv-verifier = ["bincode", "bitfield", "libc", "openssl", "openssl-sys", "reqwest", "serde-big-array"]
kunpeng-verifier = []
